@@ -2,9 +2,42 @@ namespace Qyoto {
 
 	using System;
 	using System.Collections;
+	using System.Runtime.InteropServices;
 	using System.Text;
 
+	class EventReceiver : QObject {
+		public EventReceiver(QObject parent) : base(parent) {}
+		
+		public override bool Event(QEvent e) {
+			if (e.type() == QEvent.TypeOf.User) {
+				ThreadEvent my = (ThreadEvent) e;
+				my.dele();
+				my.handle.Free();  // free the handle so the event can be collected
+				return true;
+			}
+			return false;
+		}
+	}
+
+	class ThreadEvent : QEvent {
+		public NoArgDelegate dele;
+		public GCHandle handle;
+		
+		public ThreadEvent(NoArgDelegate d) : base(QEvent.TypeOf.User) {
+			dele = d;
+		}
+	}
+
 	public partial class QCoreApplication : QObject, IDisposable {
+		private EventReceiver receiver;
+		protected void SetupEventReceiver() { receiver = new EventReceiver(this); }
+
+		public static void Invoke(NoArgDelegate dele) {
+			ThreadEvent e = new ThreadEvent(dele);
+			e.handle = GCHandle.Alloc(e);  // we don't want the GC to collect the event too early
+			PostEvent(qApp.receiver, e);
+		}
+
 		public QCoreApplication(string[] argv) : this((Type) null) {
 			CreateProxy();
 			
@@ -15,6 +48,7 @@ namespace Qyoto {
 			interceptor.Invoke(	"QCoreApplication$?", 
 								"QCoreApplication(int&, char**)", 
 								typeof(void), typeof(int), args.Length, typeof(string[]), args );
+			SetupEventReceiver();
 		}
 	}
 }
